--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.56.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-month-picker-input": "^1.3.10",
     "react-router-dom": "^7.5.0",
     "recharts": "^3.0.2",
     "sweetalert2": "^11.19.1",
